@@ -46,7 +46,12 @@ import com.google.common.base.Preconditions;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Range;
 import com.google.common.truth.Truth;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.EnumMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
@@ -202,7 +207,7 @@ public final class ITQueryWatchTest {
     assertThat(error)
         .hasMessageThat()
         .isIn(
-            Arrays.asList(
+            List.of(
                 "Backend ended Listen stream: Cannot have inequality filters on multiple properties: [foo, bar]",
                 "Backend ended Listen stream: Cannot have inequality filters on multiple properties: [bar, foo]"));
   }
